# konstpaus

./: .eslintrc.yml  .gitignore  CNAME  Cargo.toml  README.adoc  arts.json  index.html  package-lock.json  package.json
.github/workflows/: dontet.yml  rust.yml
KonstPrep/: ArtScan.fs  KonstPrep.fsproj  Program.fs
arts/2021/09/21/: art.json  index.html
arts/2021/09/22/: art.json  index.html
arts/2021/09/23/: art.json  index.html
arts/2021/09/24/: art.json  index.html
arts/2021/09/27/: art.json  index.html
arts/2021/09/28/: art.json  index.html
arts/2021/09/29/: art.json  index.html
arts/2021/09/30/: art.json  index.html
arts/2021/10/01/: art.json  index.html
arts/2021/10/04/: art.json  index.html
arts/2021/10/05/: art.json  index.html
arts/2021/10/06/: art.json  index.html
arts/2021/10/07/: art.json  index.html
arts/2021/10/15/: art.json  index.html
arts/2021/10/17/: art.json  index.html
arts/2021/10/19/: art.json  index.html
arts/2021/10/20/: art.json  index.html
arts/2021/10/22/: art.json  index.html
arts/2021/10/26/: art.json  index.html
arts/2021/10/27/: art.json  index.html
arts/2021/10/28/: art.json  index.html
arts/2021/10/29/: art.json  index.html
arts/2021/10/31/: art.json  index.html
arts/2021/11/01/: art.json  index.html
arts/2021/11/03/: art.json  index.html
arts/2021/11/05/: art.json  index.html
arts/2021/11/10/: art.json  index.html
arts/2021/11/17/: art.json  index.html
arts/2022/05/: art.json
js/: main.js
js/art/: art-gallery.js  art-thing.js
kprs/: Cargo.toml  build.rs
(+23 files in other folders)
