[package]
name = "kprs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
gloo = "0.4"
wee_alloc = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "CssStyleDeclaration",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",]